Sep 11, 2023
  jbrowse2: added generation of file with aliases for every assembly

Sep 08, 2023
  jbrowse2: added support for species other than rat/mouse/human

Sep 05, 2023
  jbrowse2: added generation of phenotypic variants file

Aug 29, 2023
  jbrowse2: updated config for mouse and human

Aug 28, 2023
  jbrowse2: config tune ups

Aug 21, 2023
  jbrowse2: variants

Aug 11, 2023
  jbrowse2: variants tune up

Aug 8, 2023
  agr gff3: updated header

Aug 3, 2023
  jbrowse2: reenabled generation of data for rn6, rn5 and rn3.4 assemblies

Jul 31, 2023
  jbrowse2: added generation of '#sequence-region' lines for genes, qtls, sslps, protein domains and ontologies

Jul 07, 2023
  jbrowse2: temporarily restricting output only to rn7 assembly
            tuned up output of gff3 files

Jun 26, 2023
  jbrowse2: added assemblies for dog, pig, green monkey and naked mole rat

Jun 22, 2023
  jbrowse2: added mouse assemblies mm39, mm10 and mm9 to the processing
  
Jun 20, 2023
  mutant & congenic strains, protein domains: JBrowse2 files for rn6, rn5 and rn4
  ontologies, genes, qtls, markers: JBrowse2 files for rn6, rn5 and rn4
  bam conf generator: helper to generate JBrowse2 config info for a set of bam files

Jun 15, 2023
  agr gff3: updated assembly names for rat and human in gff3 headers

Jun 09, 2023
  ontologies, genes, qtls, markers: JBrowse2 files for rn7

Jun 06, 2023
  ensembl-prep: updated config to download gff3 files from Ensembl release 109 (instead of 106, as it was previously)

May 12, 2023
  genes: generates '_genes_only' and _genes_and_transcripts' files
  genes: updated loading of genes tracks into JBrowse

May 01, 2023
  genes, strains, qtls: removed generation of RatMine files (due to RatMine discontinuation)
  Gff3ColumnWriter: implemented compression in 'gz' (gzip) format or 'bgzf' (bgzip) format
     by default, the compression will be in 'bgzf' format

Jan 30, 2023
  markers: removed generation of RatMine files (due to RatMine discontinuation)
